14327
{code}
scala> val (A, B) = (1, 2)
<console>:4: error: not found: value A
       val (A, B) = (1, 2)
            ^
<console>:4: error: not found: value B
       val (A, B) = (1, 2)
               ^
{code}

This is Scala version 2.7.3.final
